force-app/main/default/objects/Area__c/Area__c.object-meta.xml
<CustomObject>
    <label>Area</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Area ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>