force-app/main/default/objects/Area__c/fields/Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Name__c</fullName>
    <label>Area Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>