force-app/main/default/objects/Area__c/fields/Area_Note__c.field-meta.xml
<CustomField>
    <fullName>Area_Note__c</fullName>
    <label>Area Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>