force-app/main/default/objects/Area__c/fields/Area_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Area_Quantity__c</fullName>
    <label>Area Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>