force-app/main/default/objects/Area__c/fields/Area_Row_ID__c.field-meta.xml
<CustomField>
    <fullName>Area_Row_ID__c</fullName>
    <label>Area Row ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>