force-app/main/default/objects/Area__c/fields/AreaID_18__c.field-meta.xml
<CustomField>
    <fullName>AreaID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AreaID (18)</label>
    <type>Text</type>
</CustomField>