force-app/main/default/objects/Area__c/fields/AreaRowID__c.field-meta.xml
<CustomField>
    <fullName>AreaRowID__c</fullName>
    <label>AreaRowID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>