force-app/main/default/objects/Area__c/fields/Integration_Key_Area__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_Area__c</fullName>
    <externalId>true</externalId>
    <label>Integration Key Area</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>