force-app/main/default/objects/Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area_Name__c</columns>
    <columns>Area_Note__c</columns>
    <columns>Area_Quantity__c</columns>
    <columns>AreaRowID__c</columns>
    <columns>Area_Row_ID__c</columns>
    <columns>Work_Order_Line_Item__c</columns>
    <columns>LineNumber__c</columns>
    <columns>Integration_Key_Area__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>